Fixed finally - horizontal scroll

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,7 @@
 .cover {
   display: flex;
   margin-top: 66px;
-  min-width: 320px;
+  min-width: 100%;
   height: 200px;
   margin-left: 0;
   margin-right: 0;
