--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,7 +1,10 @@
 .header__logo {
-  max-width: 176px;
-  min-width: 142px;
-  max-height: 52px;
-  min-height: 42px;
-  margin-right: 84px;
+  max-width: 142px;
+  max-height: 42px;
+}
+@media screen and (min-width: 768px) {
+  .header__logo {
+    max-width: 176px;
+    max-height: 52px;
+  }
 }
