--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,4 +1,3 @@
 .lead__image {
-  min-width: 320px;
   max-width: 100%;
 }
