--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -41,7 +41,7 @@
 @media screen and (max-width: 720px) {
   .photo-grid {
     max-width: 100%;
-    grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 12px;
     margin-top: 64px;
     margin-left: 16px;
