--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,6 +1,5 @@
 .place__image {
-  width: 320px;
-  height: 320px;
+  width: 100%;
   object-fit: cover;
 }
 @media screen and (min-width: 768px) {
