--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,6 @@
 .place {
   display: grid;
-  grid-template-columns: 320px;
+  grid-template-columns: auto;
   grid-template-rows: auto;
   gap: 32px;
   margin-top: 50px;
